[Fix bug] Prevent date/internet/API key/DB bypass